# silly-chat

./: .dockerignore  Dockerfile  README.md  http-client.env.json  listener.py  main.py  pyproject.toml  requirements.txt  test_main.http
